Security upgrade (#3)
* security template included

* update

* protected few routes in moviecontroller